Eliminar elementos de un FormArray

--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -41,7 +41,7 @@
         <div class="input-group">
           <input [formControlName]="i" class="form-control">
 
-          <button class="btn btn-outline-danger" type="button">
+          <button class="btn btn-outline-danger" type="button" (click)="onDeleteFavorite(i)">
             Eliminar
           </button>
         </div>
